lendings-c/infra/lendings-c-stable.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lendings-c-stable
  namespace: dev
  labels:
    app: lendings-c
    version: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lendings-c
      version: stable
  template:
    metadata:
      labels:
        app: lendings-c
        version: stable
    spec:
      containers:
        - name: lendings-c
          image: ${IMAGE_STABLE}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8881
          resources:
            requests: { memory: "256Mi", cpu: "100m" }
            limits:   { memory: "512Mi", cpu: "500m" }
