lendings-c/infra/lendings-c-service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: lendings-c-service-canary
  namespace: dev
spec:
  selector:
    app: lendings-c
    version: canary
  ports:
  - port: 8881
    targetPort: 8881
