lendings-c/infra/lendings-c-service-stable.yaml

apiVersion: v1
kind: Service
metadata:
  name: lendings-c-service-stable
  namespace: dev
  labels:
    app: lendings-c
spec:
  type: ClusterIP
  selector:
    app: lendings-c
    version: stable
  ports:
    - name: http
      port: 8881
      targetPort: 8881
      protocol: TCP
