lendings-c/infra/lendings-c-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lendings-c-service
  namespace: dev
  labels:
    app: lendings-c
spec:
  type: LoadBalancer
  selector:
    app: lendings-c
    color: blue  # Inicialmente aponta para blue. Será alterado via kubectl patch durante o deployment
  ports:
    - protocol: TCP
      port: 8881
      targetPort: 8881
  sessionAffinity: ClientIP  # Mantém sessões durante o switch
