lendings-c/infra/lendings-c-ingress-canary.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lendings-c
  namespace: dev
spec:
  rules:
    - host: lendings.dev.company.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lendings-c-service-stable
                port:
                  number: 8881   # se o Service expõe 8881
